<resources>
    <string name="app_name">Tilem</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="title_activity_tv_show_detail">TV Show Detail</string>
    <string name="date_icon">date icon</string>
    <string name="description">Description</string>
    <string name="icon_star">icon star</string>
</resources>